--- a/pages/admin.html
+++ b/pages/admin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles.css">
     <script defer src="/app.js"></script>
+    <script defer src="/firebase_options.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
