--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/animatepics.css">
     <link rel="stylesheet" href="/styles.css">
     <script defer src="/app.js"></script>
     <script defer src="/firebase_options.js"></script>
@@ -37,7 +38,7 @@
                 </li>
 
                 <li>
-                    <a href="/page3.html">Stakeholder view</a>
+                    <a href="/pages/page3.html">Stakeholder view</a>
                 </li>
 
             </ul>
@@ -46,9 +47,9 @@
 
     </header>
 
-    <section class="hidden">
-        <p class="MajorH"> WELCOME, ADMIN</p>
-    </section>
+    <h1 class="hidden2">
+        <p> WELCOME, ADMIN</p>
+        <h1>
 
 </body>
 
