--- a/pages/page2.html
+++ b/pages/page2.html
@@ -38,7 +38,7 @@
 
 
                 <li>
-                    <a href="pages/page3.html">Stakeholder view</a>
+                    <a href="page3.html">Stakeholder view</a>
                 </li>
 
             </ul>
