--- a/pages/page3.html
+++ b/pages/page3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script defer src="/app.js"></script>
     <script defer src="/firebase_options.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,16 +32,14 @@
 
             <ul>
                 <li>
-                    <a href="pages/admin.html">Admin</a>
+                    <a href="admin.html">Admin</a>
                 </li>
 
                 <li>
-                    <a href="pages/page2.html">Data collector</a>
+                    <a href="page2.html">Data collector</a>
                 </li>
 
-                <li>
-                    <a href="pages/page3.html">Stakeholder view</a>
-                </li>
+
 
             </ul>
         </nav>
