--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head class="flex">
+    <link rel="stylesheet" href="animatepics.css">
     <link rel="stylesheet" href="styles.css">
     <script defer src="app.js"></script>
     <meta charset="UTF-8">
@@ -57,37 +58,40 @@
     <section class="hidden">
         <div>
             <h1 class="MajorH">WELCOME</h1><br>
-            <h2 class="MajorH">To The Farmers App</h2>
+            <h2 class="MajorH">To The Farm Monitoring System</h2>
         </div>
     </section>
+
     <section class="hidden">
         <h2>It Does Farm stuff</h2>
         <p class="Norms">Monitor all your crops remotely on any internet enabled device through the web</p>
 
 
-        <div><img class="pictureStuff" src="/images/crop-Precision-Agriculture.jpg" </div>
+        <div class="grid-images">
 
-            <div class="sizedBox">
+            <img class="grid-images-grid-row-2  grid-images-grid-row-2" src="/images/crop-Precision-Agriculture.jpg">
+            <img src="/images/agriculture-clouds-cropland-crops-wallpaper-preview.jpg">
+            <img src="/images/agriculture-clouds-cropland-crops-wallpaper-preview.jpg">
 
-            </div>
-            <section class="hidden">
+            <img src="/images/agriculture-clouds-cropland-crops-wallpaper-preview.jpg">
 
-                <p class="Norms">Look at the grass, its green isnt it, yours can also be green</p>
-                <div>
-                    <img class="pictureStuff" src="/images/agriculture-clouds-cropland-crops-wallpaper-preview.jpg">
-                </div>
-            </section>
+            <img src="/images/agriculture-clouds-cropland-crops-wallpaper-preview.jpg">
+
+
+        </div>
     </section>
 
     <section class="hidden">
         <p>The end, dont forget to like and subscribe</p>
+
+
     </section>
 
 
 
 
     <footer class="hidden">
-        I
+        Would you like to know more about us, then click <a href="aboutUs.html"> here</a>
     </footer>
 </body>
 
