No major updates

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
     <section class="hidden">
         <h2>It Does Farm stuff</h2>
-        <p class="Norms">Monitor all your crops remotely on any internet enabled device through the web</p>
+        <p class="Nor
+        ms">Monitor all your crops remotely on any internet enabled device through the web</p>
 
 
         <div class="grid-images">
